Add tests for higher dimension chunked compressed datasets